plugins/kotlin/idea/tests/testData/multiplatform/chainedTypeAliasRefinement/js/js.kt
actual typealias <!LINE_MARKER("descr='Has expects in jvmJs module'")!>JvmJs<!> = Int

fun jsTest(arg: Common) {
    takeCommon(arg)
}
